[package]
name = "mi_app_web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-cors = "0.7"
actix-files = "0.6"
tokio = { version = "1.41", features = ["full"] }
tokio-postgres = "0.7"
redis = { version = "0.26", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4"] }
